--- a/src/forum.html
+++ b/src/forum.html
@@ -25,7 +25,6 @@
 
 	<!-- this page's js -->
 	<script type="text/javascript" src="js/forum.js"></script>
-	<script type="text/javascript" src="js/nav.js"></script>
 
 	<script type="text/javascript">
 	
@@ -154,7 +153,7 @@
 				<input type="checkbox" id="navButtonHidden">
 				<label id="navButton" for="navButtonHidden"></label>
 				<div id="logo">
-					<a href="index.html"><img src="img/logo.png" alt="ZeroGravity"></a>
+					<a href="#"><img src="img/logo.png" alt="ZeroGravity"></a>
 				</div>
 				<ul class="mainMenu menu">
 					<li><a href="activity.html">觀星活動</a></li>
