--- a/src/nav.html
+++ b/src/nav.html
@@ -2,45 +2,40 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZeroGravity</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>ZeroGravity</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body style="background-color:steelblue">
-    <nav id="nav">
-        <div class="relative">
-            <div class="row">
-                <input type="checkbox" id="navButtonHidden">
-                <label id="navButton" for="navButtonHidden"></label>
-                <div id="logo">
-                    <a href="#"><img src="img/logo.png" alt="ZeroGravity"></a>
-                </div>
-                <ul class="mainMenu menu">
-                    <li><a class="onThisPage" href="#">觀星活動</a></li>
-                    <li><a href="#">星際論壇</a></li>
-                    <li><a href="#">照片牆</a></li>
-                    <li><a href="#">星知識</a></li>
-                </ul>
-                <ul class="mainMenu signArea">
-                    <li id="navMemPhoto">
-                        <img src="img/p_people3.jpg">
-                    </li>
-                    <li id="navMemInfo">
-                        <span id="navMemberName">sara168</span>
-                    </li>
-                    <!-- <li id="signLeft">
+	<nav id="nav">
+		<div class="relative">
+			<div class="row">
+				<input type="checkbox" id="navButtonHidden">
+				<label id="navButton" for="navButtonHidden"></label>
+				<div id="logo">
+					<a href="#"><img src="img/logo.png" alt="ZeroGravity"></a>
+				</div>
+				<ul class="mainMenu menu">
+					<li><a class="onThisPage" href="#">觀星活動</a></li>
+					<li><a href="#">星際論壇</a></li>
+					<li><a href="#">照片牆</a></li>
+					<li><a href="#">星知識</a></li>
+				</ul>
+				<ul class="mainMenu signArea">
+					<li id="signLeft">
+						<i class="fa fa-user-circle-o" aria-hidden="true"></i>
 						<span><a href="#">註冊</a></span>
 					</li>
 					<li id="signRight">
 						<span><a href="#">登入</a></span>
-					</li> -->
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- <footer>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+		<!-- <footer>
 	Copyright@2017 by Zero Gravity
 </footer> -->
 </body>
