--- a/src/activity.html
+++ b/src/activity.html
@@ -75,7 +75,25 @@
 		}
 		
 		
-			
+			#a-star{
+				width: 450px;
+				margin:auto;	
+				margin-top: 80px;
+				margin-left: -90px;
+				/*background-color: #fff;		*/
+				stroke-dashoffset: 3000;
+    			stroke-dasharray: 3000;
+				animation: circle 10s linear both;
+				/*z-index: 10;*/
+				height: 40vh;
+			}
+
+			@keyframes circle{
+				100%{
+					stroke-dashoffset:0;
+				}
+				
+			}
 		#tit{
 			opacity: 0;
 			animation: fadeIn 5s both;
@@ -306,7 +324,7 @@ $(function(){
 				<input type="checkbox" id="navButtonHidden">
 				<label id="navButton" for="navButtonHidden"></label>
 				<div id="logo">
-					<a href="index.html"><img src="img/logo.png" alt="ZeroGravity"></a>
+					<a href="#"><img src="img/logo.png" alt="ZeroGravity"></a>
 				</div>
 				<ul class="mainMenu menu">
 					<li><a href="activity.html" class="onThisPage">觀星活動</a></li>
