--- a/src/member.html
+++ b/src/member.html
@@ -13,7 +13,6 @@
 	<script type="text/javascript" src="js/jquery.fullpage.js"></script>
 	<!-- <script type="text/javascript" src="js/forum.js"></script> -->
 	<script src="js/member.js"></script>
-	<script type="text/javascript" src="js/nav.js"></script>
 
 	<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
@@ -107,7 +106,7 @@
 				<input type="checkbox" id="navButtonHidden">
 				<label id="navButton" for="navButtonHidden"></label>
 				<div id="logo">
-					<a href="index.html"><img src="img/logo.png" alt="ZeroGravity"></a>
+					<a href="#"><img src="img/logo.png" alt="ZeroGravity"></a>
 				</div>
 				<ul class="mainMenu menu">
 					<li><a href="activity.html">觀星活動</a></li>
