--- a/src/indexMobile.html
+++ b/src/indexMobile.html
@@ -11,25 +11,17 @@
     <link rel="stylesheet" type="text/css" href="libs/pg-calendar/demo/css/style.css" />
     <link rel="stylesheet" type="text/css" href="libs/pg-calendar/src/css/pignose.calendar.css" />
     <link type="text/css" href="libs/pg-calendar/dist/pignose.calendar.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/mobile.css">
     <script src="libs/jquery/dist/jquery.min.js"></script>
-    <script src="libs/jquery-mousewheel/jquery.mousewheel.min.js"></script>
-    <script src="js/skrollr.min.js"></script>
-    <script src="libs/gsap/src/minified/TweenMax.min.js"></script>
+    <!-- <script src="js/skrollr.min.js"></script> -->
     <script type="text/javascript" src="libs/pg-calendar/demo/js/semantic.ui.min.js"></script>
     <script type="text/javascript" src="libs/pg-calendar/demo/js/prism.min.js"></script>
     <script type="text/javascript" src="libs/pg-calendar/vender/moment.min.js"></script>
     <script src="libs/pg-calendar/src/js/pignose.calendar.js"></script>
-    <script src=""></script>
-    <script src="libs/gsap/src/minified/TweenMax.min.js"></script>
-    <script type="text/javascript" src="libs/Scrollmagic/scrollmagic/minified/ScrollMagic.min.js"></script>
-    <script type="text/javascript" src="libs/Scrollmagic/scrollmagic/minified/plugins/animation.gsap.min.js"></script>
-    <script type="text/javascript" src="libs/Scrollmagic/scrollmagic/minified/plugins/debug.addIndicators.min.js"></script>
     <!-- <script src="js/jquery.mobile.custom.min.js"></script> -->
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script> -->
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script> -->
-    <script src="js/movingStar.js"></script>
-    <script src="js/index2.js"></script>
+    <script src="js/indexMobile.js"></script>
     <script src="js/index.js"></script>
     <title>ZeroGravity</title>
 </head>
