0223活動頁—個別活動燈箱修正完畢（只有第一個活動的a有燈箱連結  .ff_lightbox_link  ）

--- a/src/activity-1.html
+++ b/src/activity-1.html
@@ -14,14 +14,14 @@
      <link rel="stylesheet" type="text/css" href="css/magnific-popup.css">
      <script src="js/jquery.magnific-popup.js"></script>
 
-     <script src="js/magnific.js"></script>
+   
      <script src="js/googleMap.js"></script>
      <script src="js/activity.js"></script>
 
       <!-- fullpage -->
      <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
      <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
-     <script type="text/javascript" src="js/jquery.fullpage.min.js"></script>
+     <!-- <script type="text/javascript" src="js/jquery.fullpage.min.js"></script> -->
 
 
   
@@ -43,6 +43,8 @@
 	<script src="libs/pg-calendar/src/js/pignose.calendar.js"></script>
 	<script src="js/jquery.mobile.custom.min.js"></script>
 	<script type="text/javascript" src="js/nav.js"></script>
+	
+
 	<style>
 		*{
 			/*outline: 1px solid red;*/
@@ -485,7 +487,7 @@ $(function(){
 													<i class="fa fa-star-o" aria-hidden="true"></i><span></span>20人收藏
 												</div>
 												<div class="aa-btn btn-blue btn-lg">
-													<a href="#a_1activity_wrapper" data-effect="mfp-3d-unfold">熱烈報名中</a>
+													<a href="" class="ff_lightbox_link">熱烈報名中</a>
 												</div>
 												<div class="clear"></div>
 											</div>
@@ -669,99 +671,149 @@ $(function(){
 </div><!-- fullpage	 -->
 
 <!-- 單則活動內容 -->
-<section id="a_1activity_wrapper" style="background-color: #000"  class="white-popup mfp-with-anim mfp-hide" >
-<button title="Close (Esc)" type="button" class="mfp-close">×</button>
-<div class="container">
-<div class="aa_banner">
-	<div class="aa_info">
-		<h3>墾丁南十字星觀星露營</h3>
-		<p>時序漸入夏，落山風遠離了恆春半島，5月的墾丁在春雨澆淋下，大地重披翠綠青衫，天地一片明淨，也正是認識春夏星空及屬於南半球的南十字星座的好時間，邀請您一起感受兼具知性與感性的夜空。 </p>
-		<span class="Organiser"><i class="fa fa-user-o" aria-hidden="true"></i>主辦人：Leo S</span>
-		<span class="day"><i class="fa fa-calendar-o" aria-hidden="true"></i>日期：2017-05-01(週一) 8:00~2017-05-02(週二)16:00</span>
-		<span class="type"><i class="fa fa-tags" aria-hidden="true"></i>類型：休閒聯誼</span>
-		<span class="location"><i class="fa fa-map-marker" aria-hidden="true"></i>地點：屏東縣恆春鎮100號(貓鼻頭國家公園)</span>
-		<span class="cost"><i class="fa fa-money" aria-hidden="true"></i>費用：3000元</span>
-		<div class="btn-lg btn-blue"><a href="">我要報名</a></div>
-	</div>
-</div>
-<div class="aa_comments">
-	<div class="container">
-	<div class="row">
-	<h4>主辦人-評價Comment</h4>
-	<div class="comment ct1">
-		<div class="user">
-			<div class="user-pic">
-				<img src="img/i-member2.png">
-			</div>
-			<div class="user-info">
-				<span><a href="">Kattie918</a></span>
-			</div>
-		</div>
-		<div class="ct-content">
-			<p>參加活動：2015年墾丁南十字觀星攝影<span class="ct-stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></span></p>
-			<p>主辦很細心，活動安排很讚。很推薦大家參加他的活動唷！</p>
-			<p>2015-06-01 11:00</p>
-		</div>
-		<div class="clear"></div>
-	</div>
-	<div class="comment ct2">
-		<div class="user">
-			<div class="user-pic">
-				<img src="img/i-member2.png">
-			</div>
-			<div class="user-info">
-				<span><a href="">Kattie918</a></span>
-			</div>
-		</div>
-		<div class="ct-content">
-			<p>參加活動：2015年墾丁南十字觀星攝影<span class="ct-stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></span></p>
-			<p>主辦很細心，活動安排很讚。很推薦大家參加他的活動唷！</p>
-			<p>2015-06-01 11:00</p>
-		</div>
-		<div class="clear"></div>
-	</div>
-	<div class="comment ct3">
-		<div class="user">
-			<div class="user-pic">
-				<img src="img/i-member2.png">
-			</div>
-			<div class="user-info">
-				<span><a href="">Kattie918</a></span>
-			</div>
-		</div>
-		<div class="ct-content">
-			<p>參加活動：2015年墾丁南十字觀星攝影<span class="ct-stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></span></p>
-			<p>主辦很細心，活動安排很讚。很推薦大家參加他的活動唷！</p>
-			<p>2015-06-01 11:00</p>
-		</div>
-		<div class="clear"></div>
-	</div>
-	<div class="comment ct4">
-		<div class="user">
-			<div class="user-pic">
-				<img src="img/i-member2.png">
-			</div>
-			<div class="user-info">
-				<span><a href="">Kattie918</a></span>
-			</div>
-		</div>
-		<div class="ct-content">
-			<p>參加活動：2015年墾丁南十字觀星攝影<span class="ct-stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></span></p>
-			<p>主辦很細心，活動安排很讚。很推薦大家參加他的活動唷！</p>
-			<p>2015-06-01 11:00</p>
-		</div>
-		<div class="clear"></div>
-	</div>
 
-		
+<div id="ff_lightbox"  style="transform: scale(0);">
+<section id="a_1activity_wrapper" >
+   <div id="close-btn">
+		<div id="closeIt">CLOSE</div>
+		<img class="closeIco" src="img/close.svg" alt="close icon">
 	</div>
-	</div>
-</div>
-</div>	
+	<div class="container">
+	<div class="aa_content">
+		<div class="aa_banner">
+			<div class="aa_info">
+				<h3>墾丁南十字星觀星露營</h3>
+				<p>時序漸入夏，落山風遠離了恆春半島，5月的墾丁在春雨澆淋下，大地重披翠綠青衫，天地一片明淨，也正是認識春夏星空及屬於南半球的南十字星座的好時間，邀請您一起感受兼具知性與感性的夜空。 </p>
+				<span class="Organiser"><i class="fa fa-user-o" aria-hidden="true"></i>主辦人：Leo S</span>
+				<span class="day"><i class="fa fa-calendar-o" aria-hidden="true"></i>日期：2017-05-01(週一) 8:00~2017-05-02(週二)16:00</span>
+				<span class="type"><i class="fa fa-tags" aria-hidden="true"></i>類型：休閒聯誼</span>
+				<span class="location"><i class="fa fa-map-marker" aria-hidden="true"></i>地點：屏東縣恆春鎮100號(貓鼻頭國家公園)</span>
+				<span class="cost"><i class="fa fa-money" aria-hidden="true"></i>費用：3000元</span>
+				<div class="btn-lg btn-blue"><a href="">我要報名</a></div>
+			</div>
+		</div>
+		<div class="aa_comments">
+			<div class="container">
+			<div class="row">
+			<h4>主辦人-評價Comment</h4>
+			<div class="comment ct1">
+				<div class="user">
+					<div class="user-pic">
+						<img src="img/i-member2.png">
+					</div>
+					<div class="user-info">
+						<span><a href="">Kattie918</a></span>
+					</div>
+				</div>
+				<div class="ct-content">
+					<p>參加活動：2015年墾丁南十字觀星攝影<span class="ct-stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></span></p>
+					<p>主辦很細心，活動安排很讚。很推薦大家參加他的活動唷！</p>
+					<p>2015-06-01 11:00</p>
+				</div>
+				<div class="clear"></div>
+			</div>
+			<div class="comment ct2">
+				<div class="user">
+					<div class="user-pic">
+						<img src="img/i-member2.png">
+					</div>
+					<div class="user-info">
+						<span><a href="">Kattie918</a></span>
+					</div>
+				</div>
+				<div class="ct-content">
+					<p>參加活動：2015年墾丁南十字觀星攝影<span class="ct-stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></span></p>
+					<p>主辦很細心，活動安排很讚。很推薦大家參加他的活動唷！</p>
+					<p>2015-06-01 11:00</p>
+				</div>
+				<div class="clear"></div>
+			</div>
+			<div class="comment ct3">
+				<div class="user">
+					<div class="user-pic">
+						<img src="img/i-member2.png">
+					</div>
+					<div class="user-info">
+						<span><a href="">Kattie918</a></span>
+					</div>
+				</div>
+				<div class="ct-content">
+					<p>參加活動：2015年墾丁南十字觀星攝影<span class="ct-stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></span></p>
+					<p>主辦很細心，活動安排很讚。很推薦大家參加他的活動唷！</p>
+					<p>2015-06-01 11:00</p>
+				</div>
+				<div class="clear"></div>
+			</div>
+			<div class="comment ct4">
+				<div class="user">
+					<div class="user-pic">
+						<img src="img/i-member2.png">
+					</div>
+					<div class="user-info">
+						<span><a href="">Kattie918</a></span>
+					</div>
+				</div>
+				<div class="ct-content">
+					<p>參加活動：2015年墾丁南十字觀星攝影<span class="ct-stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></span></p>
+					<p>主辦很細心，活動安排很讚。很推薦大家參加他的活動唷！</p>
+					<p>2015-06-01 11:00</p>
+				</div>
+				<div class="clear"></div>
+			</div>
+			</div>
+			</div>
+		</div>
+	</div>	
 </section>
+</div>
 
 
 <!-- 單則活動內容完 -->
+<script type="text/javascript">
+	$(document).ready(function(){
+	// lightbox效果--主題被點擊後，lightbox跳出
+		$('.ff_lightbox_link').click(function(e){
+			e.preventDefault();
+
+			$('#ff_lightbox').css({
+				transform: 'scale(1) ',
+				transition:'.5s linear'
+
+			})
+			
+		});
+
+		$('#close-btn').click(function(){
+			$('#ff_lightbox').css({
+				transform: 'scale(0)',
+				transition:'.5s linear'
+			})
+		})
+
+
+	//lightbox close-btn
+		$('#close-btn').hover(function(){
+			$('#closeIt').css({
+				color: '#ffc889',
+				opacity: '1'
+			});
+			$('.closeIco').attr({
+				src: 'img/close2.svg'
+			});
+		},function(){
+			$('#closeIt').css({
+				color: 'white',
+				opacity: '1'
+			});
+			$('.closeIco').attr({
+				src: 'img/close.svg'
+			});
+		})
+
+
+
+	})
+</script>
 
 
 
