--- a/src/activity_recommend.html
+++ b/src/activity_recommend.html
@@ -17,7 +17,7 @@
      <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/stats.js/r11/Stats.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js"></script>
     <script type="text/javascript" src="js/nav.js"></script>
-    <script type="text/javascript" src="js/activity.js"></script>
+    <!-- <script type="text/javascript" src="js/activity.js"></script> -->
 </head>
 
 <style type="text/css" media="screen">
